# odoo-mcp-server

./: .env.example  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
src/odoo_mcp/: __init__.py  config.py  odoo_client.py  server.py
src/odoo_mcp/tools/: partners.py
tests/: __init__.py
